hphp/hack/test/typecheck/safe_abstract/needs_concrete_8.php.class_pointer.exp
ERROR: File "needs_concrete_8.php", line 4, characters 5-19:
Unrecognized user attribute: `__NeedsConcrete` starts with __ but is not a standard attribute (Naming[2049])
