hphp/hack/test/typecheck/safe_abstract/needs_concrete_8.php
<?hh

abstract class A {
  <<__NeedsConcrete>>
  public static function nc(): void {}
}

function foo(concreteclassname<A> $cls): void {
  $cls::nc(); // ok
}
